--- a/assets/css/principal.css
+++ b/assets/css/principal.css
@@ -1,20 +1,38 @@
+:root{
+  --cor-fundo: #222222;
+}
+
 * {
   bottom: 0;
   margin: 0;
   padding: 0;
 }
 
+body{
+  font-family: sans-serif;
+  background-color: var(--cor-fundo);
+  color: white
+}
 img{
   border-radius: 15px;
 }
-body{
-  font-family: sans-serif;
-  background-color: #222222;
-  color: white
+
+
+.imagem img{
+  position: static;
+  width: 1690px;
+  height: 700px;
+  z-index: -1;
 }
+.imagem div{
+  background-color: rgb(102, 0, 0);
+  height: 100px;
+  z-index: 2;
+}
+
 header{
   font-family: "Helvetica Neue", "Netflix Sans", sans-serif;
-  padding: 3%;
+  padding: 2%;
   background-color: black;
   color: red;
   display: flex;
@@ -22,40 +40,55 @@ header{
   align-items: center;
   animation: descendo 2s;
 }
+
 nav, ul {
   list-style: none;
   display: flex;
   gap: 100px;
 }
+li:hover{
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 td {
   padding: 10px;
   border-radius: 10px;
   text-align: center;
+  /*width: 2000000000000000000000000000000000000000000000000000000000px;*/
+}
+td img {
+  max-width: 180px;
+  height: auto;
 }
 td:hover{
   background-color: #3E3E3E;
   cursor: pointer;
 }
-li:hover{
-  cursor: pointer;
-  text-decoration: underline;
+
+#linha td:hover{
+  background-color: var(--cor-fundo);
+  cursor:default;
 }
+
 table{
-  font-size: 130%;/*  sdadadsdad    */
+  font-size: 100%;/*  sdadadsdad    */
   color: red;
   padding: 3%;
-  animation: entrando 2s
+  animation: entrando 2s;
 }
 summary:hover{
   color: yellow;
   cursor: pointer;
 }
+
 a{
   text-decoration: none;
 }
 p{
   text-decoration: none;
 }
+
 @keyframes descendo{
   from{
     margin-top: -10%;
