--- a/assets/css/sobremim.css
+++ b/assets/css/sobremim.css
@@ -6,19 +6,22 @@
 }
 
 body{
-    background-color: #7a0000;
+    background-color: #222222;
+}
+img{
+    border-radius: 5px;
 }
 
 .header{
     background-color: #000000;
-    color: #ffffff;
-    padding: 25px;
+    color: #ff0000;
+    padding: 2%;
     position: sticky;
     display: flex;
     justify-content: space-between; /*separar o titulo e "voltar"*/
     text-align: center;
-    /*position: fixed;*/
-    width: 1486px; /*??????, oq é max-width*/
+    min-width: auto;
+    align-items: center;
 }
 
 .header nav{
@@ -31,16 +34,21 @@ body{
     display: flex;
     margin-right: 30px; /*!!!!!!!!!!!!!!!*/
     margin-top: 5px;
+    font-size: 20px;
+}
+li:hover{
+    cursor: auto; /* Proposital */
+    text-decoration: underline;
 }
 
 a{
-    color: white;
+    color: red;
     text-decoration: none;
 }
 
 #titulo{
     text-align: center;
-    background-color: #E5E4E2;
+    background-color: rgb(230, 230, 230, 1);
     padding: 15px;
     width: 30%;
     border-radius: 10px;
