--- a/assets/css/filme.css
+++ b/assets/css/filme.css
@@ -1,6 +1,25 @@
+
+:root{
+    --cor-fundo: #101010;
+    --cor-header: #000;
+    --cor-letras: #f00;
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    bottom: 0;
+}
+
+body{
+    font-family: sans-serif;
+    background-color: var(--cor-fundo);
+    color: rgb(224, 224, 224); 
+}
+
+
 header{
     font-family: "Helvetica Neue", "Netflix Sans", sans-serif;
-    position: fixed;
     top: 0;
     left: 0;
     width: 96%;
@@ -36,4 +55,44 @@ a:hover{
 li:hover{
     cursor: pointer;
     text-decoration: underline;
+}
+
+
+main{
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    align-items: start;
+}
+
+.botoes{
+    margin-top: 50px;
+}
+.botoes a{
+    background-color: var(--cor-letras);
+    border-radius: 5px;
+    padding: 15px;
+    color: white;
+    margin: 15px;
+}
+
+h3{
+    width: 200px;
+    margin: 20px auto;
+}
+
+section{
+    width: 900px;
+}
+
+hr{
+    width: 200px;
+    margin: 30px auto;
+    background-color: var(--cor-letras);
+    border: none;
+    height: 2px;
+}
+
+p{
+    text-align: justify;
 }
