--- a/assets/css/inicio.css
+++ b/assets/css/inicio.css
@@ -13,8 +13,14 @@
 body{
   font-family: sans-serif;
   background-color: black;
-  color: white
+  color: white;
+  overflow: auto;
+  -ms-overflow-style: none; /* Edge */
 }
+body::-webkit-scrollbar { /* Esconder barra de rolagem*/
+  display: none;
+}
+
 img{
   border-radius: 15px;
 }
@@ -136,6 +142,6 @@ a{
     margin-left: -98%;
   }
   to{
-    margin: 0;
+    margin: 6%;
   }
 }
